--- a/TaskManagment.Infrastructure/TaskManagment.Infrastructure.csproj
+++ b/TaskManagment.Infrastructure/TaskManagment.Infrastructure.csproj
@@ -8,13 +8,15 @@
 
   <ItemGroup>
     <None Remove="Services\" />
-    <None Remove="Models\" />
+    <None Remove="DataContracts\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
-    <Folder Include="Models\" />
+    <Folder Include="DataContracts\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
