--- a/TaskManagment.Infrastructure/TaskManagment.Infrastructure.csproj
+++ b/TaskManagment.Infrastructure/TaskManagment.Infrastructure.csproj
@@ -18,5 +18,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
   </ItemGroup>
 </Project>
