--- a/TaskManagementWin/TaskManagementWin.csproj
+++ b/TaskManagementWin/TaskManagementWin.csproj
@@ -13,13 +13,25 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TaskManagment.Infrastructure\TaskManagment.Infrastructure.csproj" />
+    <ProjectReference Include="..\TaskManagment.Infrastructure\TaskManagement.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Update="Pages\RegisterPage.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
