improve teams ux

--- a/TaskManagment.Infrastructure/TaskManagement.Infrastructure.csproj
+++ b/TaskManagment.Infrastructure/TaskManagement.Infrastructure.csproj
@@ -9,10 +9,12 @@
   <ItemGroup>
     <None Remove="Services\" />
     <None Remove="DataContracts\" />
+    <None Remove="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="DataContracts\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
