--- a/TaskManagementApp/TaskManagementApp.csproj
+++ b/TaskManagementApp/TaskManagementApp.csproj
@@ -59,11 +59,13 @@
       <None Remove="Pages\" />
       <None Remove="Services\" />
       <None Remove="Platforms\Android\Resources\xml\" />
+      <None Remove="ViewModels\" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Pages\" />
       <Folder Include="Services\" />
       <Folder Include="Platforms\Android\Resources\xml\" />
+      <Folder Include="ViewModels\" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\TaskManagment.Infrastructure\TaskManagement.Infrastructure.csproj" />
